--- a/client/.travis.yml
+++ b/client/.travis.yml
@@ -15,3 +15,10 @@ after_success:
   - docker build -t radevt/multi-nginx ./nginx
   - docker build -t radevt/multi-server ./server
   - docker build -t radevt/multi-worker ./worker
+  # Log in to the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push them to docker hub
+  - docker push radevt/multi-client
+  - docker push radevt/multi-nginx
+  - docker push radevt/multi-server
+  - docker push radevt/multi-worker 
