--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,21 @@ services:
   - docker
 
 before_install:
-  - docker build -t radevt/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t todorradevext351/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true radevt/react-test npm test
+  - docker run -e CI=true todorradevext351/react-test npm test
 
 
 after_success:
-  - docker build -t radevt/multi-client ./client
-  - docker build -t radevt/multi-nginx ./nginx
-  - docker build -t radevt/multi-server ./server
-  - docker build -t radevt/multi-worker ./worker
+  - docker build -t todorradevext351/multi-client ./client
+  - docker build -t todorradevext351/multi-nginx ./nginx
+  - docker build -t todorradevext351/multi-server ./server
+  - docker build -t todorradevext351/multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push radevt/multi-client
-  - docker push radevt/multi-nginx
-  - docker push radevt/multi-server
-  - docker push radevt/multi-worker 
+  - docker push todorradevext351/multi-client
+  - docker push todorradevext351/multi-nginx
+  - docker push todorradevext351/multi-server
+  - docker push todorradevext351/multi-worker 
