--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16-alpine as builder
+FROM node:16-alpine
 WORKDIR "/app"
 COPY ./package.json ./
 RUN npm install
@@ -8,4 +8,4 @@ CMD npm run builder
 FROM nginx
 EXPOSE 3000
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from builder /app/build /usr/share/nginx/html
+COPY --from=0 /app/build /usr/share/nginx/html
